After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768696 - Mac OS X build warnings: -Werror gstjpeg2000parse.c
Mac OS X build warnings: -Werror gstjpeg2000parse.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.9.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-11 20:30 UTC by Joe Gorse
Modified: 2016-07-11 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Joe Gorse 2016-07-11 20:30:57 UTC
CC       libgstvideoparsersbad_la-gsth265parse.lo
gstjpeg2000parse.c:446:45: error: implicit conversion from enumeration type 'GstJPEG2000Colorspace' to different enumeration type 'GstJPEG2000Sampling' [-Werror,-Wenum-conversion]
          4) ? GST_JPEG2000_SAMPLING_RGBA : GST_JPEG2000_COLORSPACE_RGB;
                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[3]: *** [libgstvideoparsersbad_la-gstjpeg2000parse.lo] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [videoparsers] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [all-recursive] Error 1
make: *** [all] Error 2

===
Temp workaround is to disable fatal warnings
./configure --disable-fatal-warnings
Comment 1 Sebastian Dröge (slomo) 2016-07-11 21:03:31 UTC
commit 064f46e9e16a11aef47ab5e0e75f1573a3458417
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jul 12 00:02:53 2016 +0300

    jpeg2000parse: Use correct enum type
    
    GST_JPEG2000_SAMPLING_RGB instead of GST_JPEG2000_COLORSPACE_RGB
    
    https://bugzilla.gnome.org/show_bug.cgi?id=768696